AUTOMAKE_OPTIONS = 1.6 foreign

EXTRA_DIST = \
	add_key_info.1 \
	api.txt \
	asn_gen.1 \
	casn_functions.3 \
	check_signature.1 \
	doxygen \
	dump.1 \
	dump_smart.1 \
	gen_key.1 \
	glossary.txt \
	make_manifest.1 \
	make_oidtable.1 \
	make_roa.1 \
	make_TA.1 \
	read_roa.1 \
	rr.1 \
	rsync_aur.1 \
	sign_cert.1 \
	validateTA.1
