AUTOMAKE_OPTIONS = 1.6 foreign

SUBDIRS = rtr

TESTS = \
	./runSubsystemTest1.sh \
	./runSubsystemTest2.sh \
	./runSubsystemTest3.sh \
	./runSubsystemTest4.sh

EXTRA_DIST = \
	doLoader \
	initDB \
	initDB4 \
	INSTRUCTIONS \
	make* \
	runSubsystemTest*.sh \
	specs.*.* \
	step* \
	test*.log \
	testcases4_LTA \
	test.include \
	ttest*.par

CLEANFILES = \
	garbage.log \
	query.log \
	rcli.log \
	rsync_aur.log
# TODO: are there more CLEANFILES? C*.cer?
